Removing the NPM install part and the oh-my-zsh

--- a/README
+++ b/README
@@ -1,8 +1,13 @@
 # Docker vagrant
 
-1. Clone the repository 
+1. Clone the repository
 2. `vagrant up`
-3. vagrant ssh 
+3. vagrant ssh
 
+All folders in the `apps` will be synchronized to the `/vagrant` folder in the box.
 
-All folders in the `apps` will be synchronized to the `/vagrant` folder in the box.  
+To make this even better, you should add an alias to your box :
+
+```
+sudo echo "192.168.5.10  vagrant.local"  >> /etc/hosts
+```
